Updating README to reflect launchpad hosting.

--- a/README
+++ b/README
@@ -39,5 +39,6 @@ New to Asgard?:
 Check out our website and wiki:
 Home Page - http://asgardrpg.org/
      Wiki - http://wiki.asgardrpg.org/
- Bugzilla - http://bugzilla.asgardrpg.org/
-  Project - http://gna.org/projects/asgard/
+     Bugs - http://bugs.launchpad.net
+     Code - http://code.launchpad.net
+  Project - http://launchpad.net/asgard
