--- a/README
+++ b/README
@@ -21,9 +21,9 @@ Boost 1.40 - http://boost.org
 
 4. To Run: 
      (filename argument)
-% ./asgard test.py
+% ./asgard scripts/demo3.py
 -or- (stdin)
-% ./asgard < test.py
+% ./asgard < scripts/demo3.py
 -or- (interactive mode)
 % ./asgard -i
 
