--- a/README
+++ b/README
@@ -2,12 +2,14 @@ Quick Start Instructions:
 ===============================================================================
 
 We thank you for taking interest in Asgard!  As this project is still in its
-infancy, this release is intended for testing and observation.  
+infancy, this release is intended for testing, observation and interest
+piquing. 
 
-You can now observe that we have a functional graphics engine which displays a
-dancing blue cat!
+As of 0.3.5, Asgard supports a basic, bare bones map complete with only a few
+map objects.
 
-We encourage you to attempt to compile and run it.  Let us know how things go.
+We encourage you to attempt to compile and run Asgard.  Let us know how things
+go.  Thanks.
 
 1. Satisfy Requirements
 scons      - http://scons.org
@@ -15,23 +17,28 @@ SDL        - http://libsdl.org
 SQLite 3   - http://sqlite.org
 Boost 1.40 - http://boost.org
 
+2. Untar..
+$ tar xvf asgard-0.3.5.tar.gz
+
 3. Now compile the project..
-% cd $PKG/
-% scons
+$ cd asgard-0.3.5/
+$ scons
 
 4. To Run: 
-     (filename argument)
-% ./asgard scripts/demo3.py
--or- (stdin)
-% ./asgard < scripts/demo3.py
--or- (interactive mode)
-% ./asgard -i
+$ ./asgard scripts/demo3.py
+
+You should see the map panning around with Palm Trees, Treasure Chests, Rocks
+and possible small Blue Cat.
 
 5. To Clean Your Project Tree:
-% cd $PKG/
-% scons -c
+$ cd asgard-0.3.5/
+$ scons -c
 
-You should see the dancing blue cat in the top left hand corner.
+Want to Help?:
+===============================================================================
+If you enjoy RPGs and have a desire to develop an innovative video game please
+consider helping out the project.  Read ... "Become a Developer in Six
+Simple Steps" http://bit.ly/pumAu0
 
 New to Asgard?:
 ===============================================================================
@@ -42,3 +49,7 @@ Home Page - http://asgardrpg.org/
      Bugs - http://bugs.launchpad.net
      Code - http://code.launchpad.net
   Project - http://launchpad.net/asgard
+
+Contact:
+===============================================================================
+Drop us a line at asgard.team@gmail.com.
