--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,5 +1,6 @@
 asgard (0.3.6-1) oneiric; urgency=low
 
-  * Initial release
+  * Initial Ubuntu package.
+  * Spritesheet caching.
 
- -- Russ Adams <russ.adams@gmail.com>  Sat, 05 Nov 2011 12:09:19 -0400
+ -- Russ Adams <russ.adams@gmail.com>  Sat, 03 Dec 2011 12:10:00 -0400
