--- a/distro/README
+++ b/distro/README
@@ -5,7 +5,7 @@ We thank you for taking interest in Asgard!  As this project is still in its
 infancy, this release is intended for testing, observation and interest
 piquing. 
 
-As of 0.3.5, Asgard supports a basic, bare bones map complete with only a few
+As of 0.3.6, Asgard supports a basic, bare bones map complete with only a few
 map objects.
 
 We encourage you to attempt to compile and run Asgard.  Let us know how things
@@ -16,25 +16,29 @@ scons      - http://scons.org
 SDL        - http://libsdl.org
 SQLite 3   - http://sqlite.org
 Boost 1.40 - http://boost.org
+Python 2.6 - http://python.org
 
 2. Untar..
-$ tar xvf asgard-0.3.5.tar.gz
+$ tar xvf asgard-0.3.6.tar.gz
+$ cd asgard-0.3.6/
 
-3. Now compile the project..
-$ cd asgard-0.3.5/
+3. Compile
 $ scons
 
-4. To Run: 
-$ ./asgard scripts/demo3.py
+4. Install
+$ sudo scons install
+
+5. To Run: 
+$ asgard /usr/share/asgard/scripts/demo3.py
 
 You should see the map panning around with Palm Trees, Treasure Chests, Rocks
 and possible small Blue Cat.
 
-5. To Clean Your Project Tree:
-$ cd asgard-0.3.5/
+6. To Clean Your Project Tree:
+$ cd asgard-0.3.6/
 $ scons -c
 
-Want to Help?:
+Want to Help?
 ===============================================================================
 If you enjoy RPGs and have a desire to develop an innovative video game please
 consider helping out the project.  Read ... "Become a Developer in Six
