Updating the package and manpage for 0.3.7 release.

--- a/distro/docs/asgard.1
+++ b/distro/docs/asgard.1
@@ -1,4 +1,4 @@
-.TH ASGARD 1 "OCTOBER 2011" ASGARD "Game Manual"
+.TH ASGARD 1 "FEBRUARY 2012" ASGARD "Game Manual"
 .SH NAME
 .B
 asgard
@@ -6,8 +6,6 @@ asgard
 .SH SYNOPSIS
 .B asgard
 .I script.py
-
-.B asgard [-i]
 
 .B asgard
 <
@@ -27,10 +25,9 @@ Load the map from the database onto the screen.
 .B asgard /usr/share/asgard/scripts/demo3.py
 
 Load the map from the database onto the screen and do a sloppy pan across the map in a rectangular motion.
-.SH OPTIONS
-.IP -i
-Interactive Python Console Mode. Asgard accepts commands from a console.
 .SH AUTHOR
 Written by Russ Adams <russ dot adams at gmail dot com>
+    and by Sean Eubanks <seanmeu at gmail dot com>
+
 .SH REPORTING BUGS
 Report asgard bugs at <http://bugs.launchpad.net/asgard>.
