--- a/distro/docs/asgard.1
+++ b/distro/docs/asgard.1
@@ -1,4 +1,4 @@
-.TH ASGARD 1 "FEBRUARY 2012" ASGARD "Game Manual"
+.TH ASGARD 1 "APRIL 2012" ASGARD "Game Manual"
 .SH NAME
 .B
 asgard
@@ -15,8 +15,9 @@ asgard
 is a free software, classic role playing game. Thank you for taking interest in
 Asgard. As this project is still in its infancy, this package is intended for
 testing, observation and interest piquing. Currently Asgard supports a basic,
-bare bones map complete with only a few map objects. We encourage you to to
-compile, run and hack Asgard.
+bare bones map complete with only a few map objects. You may also click to move
+the Character around the map. We encourage you to to compile, run and hack
+Asgard.
 .SH EXAMPLES
 .B asgard /usr/share/asgard/scripts/demo1.py
 
@@ -24,7 +25,8 @@ Load the map from the database onto the screen.
 
 .B asgard /usr/share/asgard/scripts/demo3.py
 
-Load the map from the database onto the screen and do a sloppy pan across the map in a rectangular motion.
+Load the map from the database onto the screen and do a sloppy pan across the
+map in a rectangular motion.
 .SH AUTHOR
 Written by Russ Adams <russ dot adams at gmail dot com>
     and by Sean Eubanks <seanmeu at gmail dot com>
