--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,10 @@
+asgard (0.3.8-1) oneiric; urgency=low
+
+  * Character Movement
+  * Map Panning
+
+ -- Russ Adams <russ.adams@gmail.com>  Sun, 15 Apr 2012 00:00:00 -0400
+
 asgard (0.3.7-1) oneiric; urgency=low
 
   * Event Handler.
