--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,11 @@
+asgard (0.3.9-1) precise; urgency=low
+
+  * Proximity Stacking
+  * Bugfixes
+  * Disabled glog support due to issues with Precise
+
+ -- Russ Adams <russ.adams@gmail.com>  Sun, 15 Jun 2012 00:00:00 -0400
+
 asgard (0.3.8-1) oneiric; urgency=low
 
   * Character Movement
