--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,11 @@
+asgard (0.3.10-1) precise; urgency=low
+
+  * Hardpoint Enforcement 
+  * Map Object Type restructuring.
+  * Infrastructure work for supporting Inventories.
+
+ -- Russ Adams <russ.adams@gmail.com>  Sun, 17 Aug 2012 00:00:00 -0400
+
 asgard (0.3.9-1) precise; urgency=low
 
   * Proximity Stacking
